@@ -121,7 +121,9 @@ enum grub_ieee1275_flag
 
   GRUB_IEEE1275_FLAG_NO_OFNET_SUFFIX,
 
-  GRUB_IEEE1275_FLAG_VIRT_TO_REAL_BROKEN
+  GRUB_IEEE1275_FLAG_VIRT_TO_REAL_BROKEN,
+
+  GRUB_IEEE1275_FLAG_BROKEN_REPEAT
 };
 
 extern int EXPORT_FUNC(grub_ieee1275_test_flag) (enum grub_ieee1275_flag flag);
